tests/compile-fail/stacked_borrows/aliasing_mut3.stderr
error: Undefined Behavior: trying to reborrow <untagged> for SharedReadOnly permission at alloc954[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/aliasing_mut3.rs:3:1
   |
LL | pub fn safe(_x: &mut i32, _y: &i32) {} //~ ERROR borrow stack
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | trying to reborrow <untagged> for SharedReadOnly permission at alloc954[0x0], but that tag does not exist in the borrow stack for this location
   | this error occurs as part of a reborrow at alloc954[0x0..0x4]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `safe` at $DIR/aliasing_mut3.rs:3:1
note: inside `main` at $DIR/aliasing_mut3.rs:14:5
  --> $DIR/aliasing_mut3.rs:14:5
   |
LL |     safe_raw(xraw, xshr);
   |     ^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

